--- a/app/src/main/res/layout/layout_product_item.xml
+++ b/app/src/main/res/layout/layout_product_item.xml
@@ -8,6 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
+    <CheckBox
+        android:id="@+id/itemProductSelected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="15dp" />
+
     <TextView
         android:id="@+id/itemProductName"
         android:layout_width="wrap_content"
